--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Build artifact
+        run: npm run build
+
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          source: ".next/standalone/*,public,.next/static"
+          target: ${{ inputs.APP_PATH }}
+
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -44,13 +57,6 @@ jobs:
             export APP_NAME=${{ inputs.APP_NAME }}
             export APP_PATH=${{ inputs.APP_PATH }}
             cd $APP_PATH
-            git pull
-            npm install
-            npm run build
-            mkdir -p build
-            cp -r public build/public
-            cp -r .next/standalone/* build
-            cp -r .next/static build/.next/static
             if pm2 describe $APP_NAME > /dev/null; then
               echo "Restarting $APP_NAME..."
               pm2 restart $APP_NAME
@@ -59,8 +65,6 @@ jobs:
               pm2 start ecosystem.config.js --only $APP_NAME
             fi
             
-            
-          
       - name: Notify Slack
         if: always()
         uses: 8398a7/action-slack@v3
