--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,14 +41,26 @@ jobs:
       - run: npm install --legacy-peer-deps
       - run: npm run build
 
-      - name: copy file via ssh password
+      - name: Remove .next/standalone,public,.next/static in remote server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            export APP_PATH=${{ inputs.APP_PATH }}
+            cd $APP_PATH
+            rm -rf .next
+
+      - name: copy file via ssh
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          source: ".next/standalone,public,.next/static"
+          source: ".next/standalone,public,.next/static,ecosystem.config.js"
           target: ${{ inputs.APP_PATH }}
 
       - name: Deploy
@@ -61,7 +73,9 @@ jobs:
           script: |
             export APP_NAME=${{ inputs.APP_NAME }}
             export APP_PATH=${{ inputs.APP_PATH }}
-            cd $APP_PATH
+            cd $APP_PATH/.next/standalone
+            mv static .next/.
+            cd ../..
             if pm2 describe $APP_NAME > /dev/null; then
               echo "Restarting $APP_NAME..."
               pm2 restart $APP_NAME
