--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "g": "^2.0.1",
     "next": "15.1.6",
     "pm2": "^5.4.3",
+    "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
