--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
               
-      - name: Lint
-        run: npm run lint
+#      - name: Lint
+#        run: npm run lint
             
       - name: Build
         run: npm run build
